--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.5.2"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.11"
+    "@pinia/nuxt": "^0.4.11",
+    "@vercel/analytics": "^1.0.1"
   }
 }
